# AtlasGenerator

./: CMakeLists.txt
atlas-generator/: CMakeLists.txt
atlas-generator-cli/: CMakeLists.txt
atlas-generator-cli/source/: main.cpp
atlas-generator/cmake/: Dependencies.cmake  clipper2.cmake  libnest2d.cmake  opencv.cmake
atlas-generator/source/atlas_generator/: Config.cpp  Config.h  Constants.h  Generator.cpp  Generator.h  PackagingException.h  limits.h  polygon_math.hpp
atlas-generator/source/atlas_generator/Item/: Item.cpp  Item.h  Iterator.h  Vertex.cpp  Vertex.h
cli/: main.cpp
cmake/: AtlasGenerator.cmake  AtlasGeneratorCLI.cmake  Dependecies.cmake
include/AtlasGenerator/: Config.h  Generator.h  PackagingException.h
include/AtlasGenerator/Item/: Item.h  SlicedItem.h  Vertex.h
source/: Config.cpp  Generator.cpp
source/Item/: Item.cpp  SlicedItem.cpp  Vertex.cpp
